<resources>
    <string name="app_name">TPM Project</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Profile</string>
    <string name="action_settings">Settings</string>

    <string name="menu_profile">Profile</string>
    <string name="menu_aboutus">About Us</string>
    <string name="menu_logout">Logout</string>

    <string name="login">Login</string>
    <string name="talent_program">Talent program</string>
    <string name="forget_password">Forget Password?</string>
    <string name="user_name">user name</string>
    <string name="password">password</string>
    <string name="nav_header_name">Mg Chit Myo Ko</string>
    <string name="nav_header_track">Mobility</string>
    <string name="nav_header_batch">Batch 1</string>
    <string name="profession">Android</string>
    <string name="teachers">Teachers</string>
    <string name="courses">Courses</string>
    <string name="students">Students</string>
    <string name="activities">Activities</string>


    <string name="work">Android Developer</string>
    <string name="office">Ace Plus Solution Co.ltd</string>
    <string name="address">Pantanaw St, SanChaung</string>
    <string name="birthday">1/2/1996</string>
    <string name="grade">Grade A</string>
    <string name="phone">+95951104661</string>
    <string name="email">myosatpaing@gmail.com</string>

    <string name="filter">Filter</string>

    <string name="studentToolbar">Students</string>
    <string name="teacaherToolbar">Teachers</string>
    <string name="courseToolbar">Courses</string>
    <string name="activitiesToolbar">Activities</string>


    <string name="course">Course</string>
    <string name="android">Android</string>
    <string name="php">PHP</string>
    <string name="java">Java</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>

</resources>
