<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">
        <group
                android:checkableBehavior="single">
            <item
                    android:icon="@drawable/profile"
                    android:title="@string/menu_profile"
                    android:id="@+id/navProfile"/>
            <item
                    android:id="@+id/navAboutUs"
                    android:icon="@drawable/aboutus"
                    android:title="@string/menu_aboutus"/>
            <item
                    android:id="@+id/navLogout"
                    android:icon="@drawable/logout"
                    android:title="@string/menu_logout"/>

        </group>

</menu>
