<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="@dimen/nav_header_height"
        android:background="@color/colorPinkSoft"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingTop="16dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        android:orientation="vertical"
        android:gravity="bottom">
    <androidx.cardview.widget.CardView
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:cardCornerRadius="50dp"
            android:layout_marginTop="16dp"
            android:layout_gravity="start">
        <ImageView
                android:id="@+id/ivProfileImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@mipmap/ic_launcher_round"
                android:contentDescription="@string/nav_header_desc"
                android:scaleType="fitXY"
                android:layout_gravity="center"/>
    </androidx.cardview.widget.CardView>

    <TextView
            android:id="@+id/tvName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:textSize="20sp"
            android:text="@string/nav_header_name"/>

    <TextView
            android:id="@+id/tvTrack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:textSize="20sp"
            android:text="@string/nav_header_track"/>
    <TextView
            android:id="@+id/tvBatch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:text="@string/nav_header_batch"
            android:textSize="20sp"
            android:layout_marginBottom="8dp"/>

</LinearLayout>
