<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bottom_sheet_round"
        android:id="@+id/bottomSheetFilter"
        app:behavior_hideable="true"
        app:behavior_peekHeight="0dp"
        android:clickable="true"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
        android:orientation="vertical">
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <Button
                android:id="@+id/btnDoneStudent"
                android:layout_marginTop="32dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Done"
                android:textColor="@color/colorAccent"
                android:backgroundTint="@color/colorWhite"
                android:textAllCaps="false"
                android:layout_alignParentRight="true"
                android:background="@drawable/bottom_sheet_button_round"/>
        <LinearLayout
                android:id="@+id/lyCourse"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="32dp"
                android:layout_width="wrap_content"
                android:orientation="vertical"
                android:layout_height="wrap_content">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorWhite"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:text="@string/course"/>
            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                <CheckBox
                        android:id="@+id/chbAndroidStudent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorWhite"
                        android:buttonTint="@color/colorWhite"
                        android:text="@string/android"/>
                <CheckBox
                        android:id="@+id/chbPhpStudent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorWhite"
                        android:buttonTint="@color/colorWhite"
                        android:text="@string/php"/>
                <CheckBox
                        android:id="@+id/chbJavaStudent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorWhite"
                        android:buttonTint="@color/colorWhite"
                        android:text="@string/java"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
                android:layout_below="@+id/lyCourse"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="32dp"
                android:layout_width="wrap_content"
                android:orientation="vertical"
                android:layout_height="wrap_content">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorWhite"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:text="@string/gender"/>
            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                <CheckBox
                        android:id="@+id/chbMaleStudent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorWhite"
                        android:buttonTint="@color/colorWhite"
                        android:text="@string/male"/>
                <CheckBox
                        android:id="@+id/chbFemaleStudent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorWhite"
                        android:buttonTint="@color/colorWhite"
                        android:text="@string/female"/>
            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>
    <View android:layout_width="wrap_content" android:layout_height="100dp"/>

</LinearLayout>