<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".LoginActivity"
        android:weightSum="3"
        android:background="@color/colorAccent">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:layout_margin="8dp"
                android:fontFamily="sans-serif-condensed"
                android:textSize="50sp"
                android:textStyle="bold"
                android:textColor="@color/colorWhite"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/talent_program"
                android:layout_margin="8dp"
                android:fontFamily="sans-serif-condensed"
                android:textSize="40sp"
                android:textColor="@color/colorWhite"
                android:layout_gravity="center_horizontal"/>
    </LinearLayout>
        <LinearLayout
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:layout_marginTop="32dp"
                android:padding="32dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_weight="1"
                android:background="@drawable/layout_round">
            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <ImageView
                        android:id="@+id/ivUserName"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/user"
                        android:layout_centerVertical="true"/>
                <EditText
                        android:layout_marginLeft="16dp"
                        android:paddingStart="8dp"
                        android:textAlignment="textStart"
                        android:id="@+id/edUserName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/user_name"
                        android:layout_toEndOf="@+id/ivUserName"
                        android:layout_centerVertical="true"/>

            </RelativeLayout>
            <RelativeLayout
                    android:layout_marginTop="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <ImageView
                        android:id="@+id/ivPassword"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/password"
                        android:layout_centerVertical="true"/>
                <EditText
                        android:layout_marginLeft="16dp"
                        android:paddingStart="8dp"
                        android:textAlignment="textStart"
                        android:id="@+id/edPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:layout_toEndOf="@+id/ivPassword"
                        android:layout_centerVertical="true"/>

            </RelativeLayout>
    </LinearLayout>
    <LinearLayout
                android:layout_marginLeft="8dp"
                android:layout_marginTop="32dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:layout_weight="1"
                android:orientation="horizontal">
            <TextView
                    android:layout_marginLeft="16dp"
                    android:id="@+id/tvForgetPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorAccent"
                    android:text="@string/forget_password"
                    android:inputType="textCapSentences"
                    android:fontFamily="sans-serif-condensed"
                    android:textStyle="bold"
                    android:textColor="@color/colorWhite"/>
            <Button
                    android:id="@+id/btnLogin"
                    android:layout_marginLeft="80dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:inputType="textCapSentences"
                    android:textColor="@color/colorAccent"
                    android:background="@drawable/button_round"/>

        </LinearLayout>
</LinearLayout>