<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.TeacherProfileActivity">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="190dp">
            <ImageButton
                    android:layout_margin="8dp"
                    android:id="@+id/btnBackTeacher"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/back"/>
            <androidx.cardview.widget.CardView
                    android:layout_marginLeft="16dp"
                    android:id="@+id/cvTeacherProfile"
                    android:layout_centerInParent="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="50dp">
                <ImageView
                        android:id="@+id/ivTeacherProfile"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/msp"/>
            </androidx.cardview.widget.CardView>

            <TextView
                    android:layout_below="@+id/cvTeacherProfile"
                    android:layout_toEndOf="@+id/cvTeacherProfile"
                    android:id="@+id/tvTeacherName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Ma Thaw Zin Aung"
                    android:fontFamily="sans-serif-condensed"
                    android:textSize="20sp"
                    android:textStyle="bold"/>

        </RelativeLayout>
        <LinearLayout
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <RelativeLayout
                    android:layout_width="50dp"
                    android:layout_height="50dp">
                <ImageView
                        android:layout_centerInParent="true"
                        android:id="@+id/ivTeacherWork"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/work"
                        android:scaleType="centerCrop"
                        android:tint="@color/colorAccent"/>
            </RelativeLayout>

            <LinearLayout
                    android:layout_marginLeft="4dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                <TextView
                        android:id="@+id/tvTeacherWork"
                        android:layout_marginLeft="4dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-condensed"
                        android:textSize="20sp"
                        android:text="@string/work"
                        android:layout_centerInParent="true"
                        android:backgroundTint="@color/colorAccent"/>
                <View
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="4dp"
                        android:layout_width="match_parent"
                        android:background="@color/colorBlack"
                        android:layout_height="1dp"/>

            </LinearLayout>
        </LinearLayout>
        <LinearLayout
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <RelativeLayout
                    android:layout_width="50dp"
                    android:layout_height="50dp">
                <ImageView
                        android:layout_centerInParent="true"
                        android:id="@+id/ivTeacherOffice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/office"
                        android:scaleType="centerCrop"
                        android:tint="@color/colorAccent"/>
            </RelativeLayout>

            <LinearLayout
                    android:layout_marginLeft="4dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                <TextView
                        android:id="@+id/tvTeacherOffice"
                        android:layout_marginLeft="4dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-condensed"
                        android:textSize="20sp"
                        android:text="@string/office"
                        android:layout_centerInParent="true"
                        android:backgroundTint="@color/colorAccent"/>
                <View
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="4dp"
                        android:layout_width="match_parent"
                        android:background="@color/colorBlack"
                        android:layout_height="1dp"/>

            </LinearLayout>
        </LinearLayout>
        <LinearLayout
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <RelativeLayout
                    android:layout_width="50dp"
                    android:layout_height="50dp">
                <ImageView
                        android:layout_centerInParent="true"
                        android:id="@+id/ivTeacherBirthday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/birthday"
                        android:scaleType="centerCrop"
                        android:tint="@color/colorAccent"/>
            </RelativeLayout>

            <LinearLayout
                    android:layout_marginLeft="4dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                <TextView
                        android:id="@+id/tvTeacherBirthday"
                        android:layout_marginLeft="4dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-condensed"
                        android:textSize="20sp"
                        android:text="@string/birthday"
                        android:layout_centerInParent="true"
                        android:backgroundTint="@color/colorAccent"/>
                <View
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="4dp"
                        android:layout_width="match_parent"
                        android:background="@color/colorBlack"
                        android:layout_height="1dp"/>

            </LinearLayout>
        </LinearLayout>
        <LinearLayout
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <RelativeLayout
                    android:layout_width="50dp"
                    android:layout_height="50dp">
                <ImageView
                        android:layout_centerInParent="true"
                        android:id="@+id/ivTeacherPhone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/phone"
                        android:scaleType="centerCrop"
                        android:tint="@color/colorAccent"/>
            </RelativeLayout>

            <LinearLayout
                    android:layout_marginLeft="4dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                <TextView
                        android:id="@+id/tvTeacherPhone"
                        android:layout_marginLeft="4dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-condensed"
                        android:textSize="20sp"
                        android:text="@string/phone"
                        android:layout_centerInParent="true"
                        android:backgroundTint="@color/colorAccent"/>
                <View
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="4dp"
                        android:layout_width="match_parent"
                        android:background="@color/colorBlack"
                        android:layout_height="1dp"/>

            </LinearLayout>
        </LinearLayout>
        <LinearLayout
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <RelativeLayout
                    android:layout_width="50dp"
                    android:layout_height="50dp">
                <ImageView
                        android:layout_centerInParent="true"
                        android:id="@+id/ivTeacherEmail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/email"
                        android:scaleType="centerCrop"
                        android:tint="@color/colorAccent"/>
            </RelativeLayout>

            <LinearLayout
                    android:layout_marginLeft="4dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                <TextView
                        android:id="@+id/tvTeacherEmail"
                        android:layout_marginLeft="4dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-condensed"
                        android:textSize="20sp"
                        android:text="@string/email"
                        android:layout_centerInParent="true"
                        android:backgroundTint="@color/colorAccent"/>
                <View
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="4dp"
                        android:layout_width="match_parent"
                        android:background="@color/colorBlack"
                        android:layout_height="1dp"/>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <View
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/colorAccent"
            android:layout_alignParentBottom="true"/>
    <RelativeLayout
            android:layout_marginBottom="16dp"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/messager_round"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true">
        <RelativeLayout
                android:layout_centerInParent="true"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/messager_round1">
            <ImageView
                    android:layout_centerInParent="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/messages"/>
        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>